--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>We believe that if conservation supports the people, then people will support conservation.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Big Life Foundation. Vision statement. [<a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">biglife.org</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We believe that if conservation supports the people, then people will support conservation.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Big Life Foundation. Vision statement. [<a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">biglife.org</a>]</font></h4>
 
       </div>
 
@@ -85,7 +85,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>All across the African continent, there are entire populations of elephants and other animals now being wiped out. The list is long: animal populations in Chad, Central African Republic, Mozambique, Congo, large parts of Tanzania, and on and on. Tragically for many of the ecosystems in these places, any conservation group would face an overwhelming struggle to be effective&mdash;for lack of government support or community collaboration, for lack of money, for lack of firepower against the rebel militia groups that sweep in to murder en masse, financing weapons purchases with their bloody bounties of ivory.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Nick Brandt, <i>Across the Ravaged Land</i> (monograph, 2013), 10. Big Life Foundation</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>All across the African continent, there are entire populations of elephants and other animals now being wiped out. The list is long: animal populations in Chad, Central African Republic, Mozambique, Congo, large parts of Tanzania, and on and on. Tragically for many of the ecosystems in these places, any conservation group would face an overwhelming struggle to be effective&mdash;for lack of government support or community collaboration, for lack of money, for lack of firepower against the rebel militia groups that sweep in to murder en masse, financing weapons purchases with their bloody bounties of ivory.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Nick Brandt, <i>Across the Ravaged Land</i> (monograph, 2013), 10. Big Life Foundation</font></h4>
 
       </div>
 
@@ -125,7 +125,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Amboseli owes its panoply of wildlife to a tapestry of habitats, from glaciers to alpine meadows forests, woodlands, arid bush, grasslands, swamps, seasonal lakes, lava flows and windswept barren flats flanked by high mountains. To the south the 19,600 feet Kilimanjaro towers over the lowland plains of Amboseli. To the east the young volcanic range of the Chyulus reaches into Tsavo West National Park. To the north rise a series of ever darker and more distant hills stretching to the Kenya highlands.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr David (Jonah) Western, founder of the African Conservation Center</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Amboseli owes its panoply of wildlife to a tapestry of habitats, from glaciers to alpine meadows forests, woodlands, arid bush, grasslands, swamps, seasonal lakes, lava flows and windswept barren flats flanked by high mountains. To the south the 19,600 feet Kilimanjaro towers over the lowland plains of Amboseli. To the east the young volcanic range of the Chyulus reaches into Tsavo West National Park. To the north rise a series of ever darker and more distant hills stretching to the Kenya highlands.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr David (Jonah) Western, founder of the African Conservation Center</font></h4>
 
       </div>
 
