--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>The life is the water, and the water knows no borders. It twists and turns through Angola and Namibia, until it converges in Botswana, spreading into one mighty freshwater delta called the Okavango. The delta, and the rivers that feed it, are the beating heart of water for three countries in southern Africa, thousands of elephants, millions of birds, hundreds of hippos&hellip; But sometimes the water does not fill the delta and no one really knows why. For centuries, during the driest parts of the year, seasonal floods have interrupted the Kalahari desert&mdash;the largest continuous stretch of sand on the planet. Without the water, the desert takes over. The reeds choke the channels, and the animals and the people wander inwards, deeper and deeper, searching. [&hellip;] And what if all of a sudden, it stopped?&nbsp;</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kerllen Costa, <i>Guardians of the River</i> e/1: &lsquo;Power to Protect&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>The life is the water, and the water knows no borders. It twists and turns through Angola and Namibia, until it converges in Botswana, spreading into one mighty freshwater delta called the Okavango. The delta, and the rivers that feed it, are the beating heart of water for three countries in southern Africa, thousands of elephants, millions of birds, hundreds of hippos&hellip; But sometimes the water does not fill the delta and no one really knows why. For centuries, during the driest parts of the year, seasonal floods have interrupted the Kalahari desert&mdash;the largest continuous stretch of sand on the planet. Without the water, the desert takes over. The reeds choke the channels, and the animals and the people wander inwards, deeper and deeper, searching. [&hellip;] And what if all of a sudden, it stopped?&nbsp;</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kerllen Costa, <i>Guardians of the River</i> e/1: &lsquo;Power to Protect&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
       </div>
 
       <div>
@@ -103,7 +103,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>These peat bogs hold as much as twenty-five times their own dry weight in water before slowly releasing it. [Dr Boyes and his crew] are literally walking on top of the sponge holding the water that eventually floods the Okavango delta.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;<i>Into the Okavango</i> (documentary, 2018) National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>These peat bogs hold as much as twenty-five times their own dry weight in water before slowly releasing it. [Dr Boyes and his crew] are literally walking on top of the sponge holding the water that eventually floods the Okavango delta.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;<i>Into the Okavango</i> (documentary, 2018) National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</font></h4>
       </div>
 
       <div class="clear">
@@ -122,7 +122,7 @@
       <!-- </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>We're on that tipping point, where that collapse happens. Without forests, without peat deposits, we lose the water. It is not stored somewhere, it is gone. This is sand.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes, <i>Into the Okavango</i> (documentary, 2018)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We're on that tipping point, where that collapse happens. Without forests, without peat deposits, we lose the water. It is not stored somewhere, it is gone. This is sand.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes, <i>Into the Okavango</i> (documentary, 2018)</font></h4>
       </div>
 
       <div> -->
@@ -139,7 +139,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Apparently this landscape is a contact point for forest and savanna. [People] here have reported ten years ago having seen forest elephants come down. These are typically elephants you find in the Congo, northern part of Angola&hellip; It is a very interesting elephant population. They have had a really tough time [&hellip;] the last few decades. But now hopefully they have the opportunity to come back. It is our job to create a safe space for elephants any way we can in Africa. This is a big opportunity for that.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes, <i>Guardians of the River</i> e/2: &lsquo;Ghost Elephants of Lisima&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Apparently this landscape is a contact point for forest and savanna. [People] here have reported ten years ago having seen forest elephants come down. These are typically elephants you find in the Congo, northern part of Angola&hellip; It is a very interesting elephant population. They have had a really tough time [&hellip;] the last few decades. But now hopefully they have the opportunity to come back. It is our job to create a safe space for elephants any way we can in Africa. This is a big opportunity for that.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes, <i>Guardians of the River</i> e/2: &lsquo;Ghost Elephants of Lisima&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
 
       </div>
 
@@ -153,7 +153,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>The land at the end of the Earth, where the wind turns. [&hellip;] Beneath the ground lie hundreds of thousands of landmines. [&hellip;] Angola's brutal 27-year civil war ended in 2002 but for the people of this region, the presence of landmines is a source of fear and trauma.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;The HALO Trust [<a class="color" href="../../../url/-com/halotrust.org" rel="noopener" target="_blank" title="The HALO Trust">halotrust.org</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>The land at the end of the Earth, where the wind turns. [&hellip;] Beneath the ground lie hundreds of thousands of landmines. [&hellip;] Angola's brutal 27-year civil war ended in 2002 but for the people of this region, the presence of landmines is a source of fear and trauma.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;The HALO Trust [<a class="color" href="../../../url/-com/halotrust.org" rel="noopener" target="_blank" title="The HALO Trust">halotrust.org</a>]</font></h4>
 
       </div>
 
@@ -165,7 +165,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Now, if we do not protect the sources, the Lisima landscape up at the top has no resilience and neither does the Okavango delta. Both systems become incredibly threatened. Elephants as a species really become threatened. So, the wildlife corridor is a way of creating safe space for elephants to expand into, and obviously, elephants are ambassadors for the other animals that they live with. They are the big engineers of the forest, planting the trees and breaking them down.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes, <i>Guardians of the River</i> e/2: &lsquo;Ghost Elephants of Lisima&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Now, if we do not protect the sources, the Lisima landscape up at the top has no resilience and neither does the Okavango delta. Both systems become incredibly threatened. Elephants as a species really become threatened. So, the wildlife corridor is a way of creating safe space for elephants to expand into, and obviously, elephants are ambassadors for the other animals that they live with. They are the big engineers of the forest, planting the trees and breaking them down.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes, <i>Guardians of the River</i> e/2: &lsquo;Ghost Elephants of Lisima&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
 
         <!-- So, if elephants move up, lions, rhinos, antelopes, everything else is going to benefit. -->
 
@@ -181,7 +181,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>The very thing that science teaches us, that we are part of a holistic ecosystem, we too often overlook. And instead, we focus on the one species that intrigues us. Sometimes it is elephants. And sometimes&hellip; It is humans. But if being an Angolan has taught me anything, it is that to truly save either, we must think about them both.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kerllen Costa, <i>Guardians of the River</i> e/2: &lsquo;Ghost Elephants of Lisima&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>The very thing that science teaches us, that we are part of a holistic ecosystem, we too often overlook. And instead, we focus on the one species that intrigues us. Sometimes it is elephants. And sometimes&hellip; It is humans. But if being an Angolan has taught me anything, it is that to truly save either, we must think about them both.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kerllen Costa, <i>Guardians of the River</i> e/2: &lsquo;Ghost Elephants of Lisima&rsquo; (2021) [<a class="color" href="../../../url/-com/wildbirdtrust-guardians-of-the-river/" rel="noopener" target="_blank" title="Wild Bird Trust / Guardians of the River">wildbirdtrust.com</a>]</font></h4>
 
       </div>
 
