--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -79,7 +79,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Elephants clearly have a cognitive ability to understand where they are threatened and where they are safe. In this case they're seeking refuge and sanctuary in Botswana where they are well protected.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Michael Chase, director and co-founder of Elephants Without Borders</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Elephants clearly have a cognitive ability to understand where they are threatened and where they are safe. In this case they're seeking refuge and sanctuary in Botswana where they are well protected.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Michael Chase, director and co-founder of Elephants Without Borders</font></h4>
       </div>
 
       <br>
@@ -108,7 +108,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, <i>The Last Elephants</i>, &lsquo;Botswana's sanctuary&rsquo; p&nbsp;225. (2019) Smithsonian Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, <i>The Last Elephants</i>, &lsquo;Botswana's sanctuary&rsquo; p&nbsp;225. (2019) Smithsonian Books</font></h4>
       </div>
 
       <div>
@@ -147,7 +147,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>The story of Botswana's elephant population has been a bright spot in a sometimes bleak landscape. Outside of Botswana, the African elephant is in crisis. Habitat loss, competition for resources, civil unrest, terrorism, human-wildlife conflict and escalated rates of poaching for ivory threaten their very existence.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, program manager and co-founder of Elephants Without Borders</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>The story of Botswana's elephant population has been a bright spot in a sometimes bleak landscape. Outside of Botswana, the African elephant is in crisis. Habitat loss, competition for resources, civil unrest, terrorism, human-wildlife conflict and escalated rates of poaching for ivory threaten their very existence.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, program manager and co-founder of Elephants Without Borders</font></h4>
       </div>
 
       <div class="clear">
@@ -210,7 +210,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>For elephants to survive, we need to identify safe corridors, linkages between areas, networks, dispersal areas, transfrontier parks. There's not much time left. Their future is in our hands. We have to get it right and do it now, while we still have the opportunity.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Michael Chase, director and co-founder of Elephants Without Borders</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>For elephants to survive, we need to identify safe corridors, linkages between areas, networks, dispersal areas, transfrontier parks. There's not much time left. Their future is in our hands. We have to get it right and do it now, while we still have the opportunity.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Michael Chase, director and co-founder of Elephants Without Borders</font></h4>
       </div>
 
       <div class="clear">
