--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>A time has come when we must take a stand and the stand is clear. [&hellip;] Kenya is making a statement that for us ivory is worthless unless it is on our elephants. This will send an absolutely clear message that the trade in ivory must come to an end and our elephants must be protected. I trust that the world will join us to end the horrible suffering of our herds and save our elephants for future generations.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;President Uhuru Kenyatta (2016) Presidential address, Nairobi, Kenya</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>A time has come when we must take a stand and the stand is clear. [&hellip;] Kenya is making a statement that for us ivory is worthless unless it is on our elephants. This will send an absolutely clear message that the trade in ivory must come to an end and our elephants must be protected. I trust that the world will join us to end the horrible suffering of our herds and save our elephants for future generations.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;President Uhuru Kenyatta (2016) Presidential address, Nairobi, Kenya</font></h4>
 
       </div>
 
@@ -75,7 +75,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Recognizing that wild fauna and flora in their many beautiful and varied forms are an irreplaceable part of the natural systems of the earth which must be protected for this and the generations to come.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES), Preamble, March 1973</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Recognizing that wild fauna and flora in their many beautiful and varied forms are an irreplaceable part of the natural systems of the earth which must be protected for this and the generations to come.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES), Preamble, March 1973</font></h4>
       </div>
 
       <div>
