--- a/scene/one/history-of-elephants/index.html
+++ b/scene/one/history-of-elephants/index.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Elephants have a special technique to get at fresh water in the dry season. No other animal has such power. Using their tusks, they pile drive into the floodplain until they reach water below the surface. In doing so, Elephants create a lifeline for others. A hyena and jackal wait their turn.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Domhnall Gleeson. (2016) <i>Earth's Greatest Spectacles</i>, e/3: Okavango. BBC Studios Natural History Unit</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Elephants have a special technique to get at fresh water in the dry season. No other animal has such power. Using their tusks, they pile drive into the floodplain until they reach water below the surface. In doing so, Elephants create a lifeline for others. A hyena and jackal wait their turn.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Domhnall Gleeson. (2016) <i>Earth's Greatest Spectacles</i>, e/3: Okavango. BBC Studios Natural History Unit</font></h4>
 
         <!-- [bbc.co.uk] bbc.co.uk/programmes/b0717vkv -->
 
@@ -113,7 +113,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>We admire elephants in part because they demonstrate what we consider the finest human traits: empathy, self-awareness, and social intelligence. But the way we treat them puts on display the very worst of human behavior.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Graydon Carter. (2011) <i>Vanity Fair</i>, Editor's letter, &lsquo;In Plain Sight&rsquo;</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We admire elephants in part because they demonstrate what we consider the finest human traits: empathy, self-awareness, and social intelligence. But the way we treat them puts on display the very worst of human behavior.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Graydon Carter. (2011) <i>Vanity Fair</i>, Editor's letter, &lsquo;In Plain Sight&rsquo;</font></h4>
 
         <!-- [vanityfair.com] vanityfair.com/magazine/2011/08/graydon-201108 -->
 
@@ -136,7 +136,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>After 146 years, Ringling Brothers has shut down. Sad news for circus fans, but great news for employers looking to snap up guys who know how to beat elephants with steel rods.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Norm MacDonald, 2017</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>After 146 years, Ringling Brothers has shut down. Sad news for circus fans, but great news for employers looking to snap up guys who know how to beat elephants with steel rods.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Norm MacDonald, 2017</font></h4>
       </div>
 
       <div class="clear">
