--- a/scene/one/wildlife-documentary-2/index.html
+++ b/scene/one/wildlife-documentary-2/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>For thousands of years, [elephants] were thought to be able to summon the rain. The truth is that [a matriarch] could sense rain coming when it was over a hundred miles away.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Chiwetel Ejiofor, narrator of <i>The Elephant Queen</i> (2018)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>For thousands of years, [elephants] were thought to be able to summon the rain. The truth is that [a matriarch] could sense rain coming when it was over a hundred miles away.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Chiwetel Ejiofor, narrator of <i>The Elephant Queen</i> (2018)</font></h4>
       </div>
 
       <div class="clear">
@@ -97,7 +97,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Communities along the water tower have maintained a lifestyle intertwined with the rivers and the ecosystem they support. But as land mines from the decades-long civil war are decommissioned and more roads open up, the outside world is encroaching into these isolated communities and the surrounding wilderness. As a result, the illegal commercial bush-meat trade has picked up, as have unregulated development, charcoal production, and logging.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;National Geographic Okavango Wilderness Project [<a class="color" href="../../../url/-org/nationalgeographic-okavango-what/" rel="noopener" target="_blank" title="National Geographic Society / Okavango Wilderness Project &ndash; What We're Doing">nationalgeographic.org</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Communities along the water tower have maintained a lifestyle intertwined with the rivers and the ecosystem they support. But as land mines from the decades-long civil war are decommissioned and more roads open up, the outside world is encroaching into these isolated communities and the surrounding wilderness. As a result, the illegal commercial bush-meat trade has picked up, as have unregulated development, charcoal production, and logging.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;National Geographic Okavango Wilderness Project [<a class="color" href="../../../url/-org/nationalgeographic-okavango-what/" rel="noopener" target="_blank" title="National Geographic Society / Okavango Wilderness Project &ndash; What We're Doing">nationalgeographic.org</a>]</font></h4>
       </div>
 
       <div>
@@ -116,7 +116,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>We need this information to benchmark this near-pristine wildlife, before upstream development happens.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes. TED: &lsquo;How we're saving one of Earth's last wild places.&rsquo; (2018) [<a class="color" href="../../../url/ted/steve-boyes-how-were-saving-one-of-earths-last-wild-places/" rel="noopener" target="_blank" title="TED / Steve Boyes: How we're saving one of Earth's last wild places">ted.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We need this information to benchmark this near-pristine wildlife, before upstream development happens.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes. TED: &lsquo;How we're saving one of Earth's last wild places.&rsquo; (2018) [<a class="color" href="../../../url/ted/steve-boyes-how-were-saving-one-of-earths-last-wild-places/" rel="noopener" target="_blank" title="TED / Steve Boyes: How we're saving one of Earth's last wild places">ted.com</a>]</font></h4>
       </div>
 
       <div class="clear">
