--- a/scene/one/wildlife-documentary-big-tuskers/index.html
+++ b/scene/one/wildlife-documentary-big-tuskers/index.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>There is mystery behind that masked grey visage and ancient life force, delicate and mighty, awesome and enchanted, commanding the silence ordinarily reserved for mountain peaks, great fires, and the sea.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Peter Matthiessen, <i>The Tree Where Man Was Born</i> (1972)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>There is mystery behind that masked grey visage and ancient life force, delicate and mighty, awesome and enchanted, commanding the silence ordinarily reserved for mountain peaks, great fires, and the sea.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Peter Matthiessen, <i>The Tree Where Man Was Born</i> (1972)</font></h4>
       </div>
 
       <div class="clear">
