--- a/scene/one/wildlife-documentary-lens/index.html
+++ b/scene/one/wildlife-documentary-lens/index.html
@@ -52,11 +52,11 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>By wrestling a precious particle of the world from time and space and holding it absolutely still, a great photograph can explode the totality of our world, such that we never see it quite the same again.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Draper, R. &lsquo;The Power of Photography&rsquo;, p.31-32, National Geographic. October 2013. [<a href="../../../url/nationalgeographic/archive-2013-oct/" class="color" rel="noopener" target="_blank" title="">nationalgeographic.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>By wrestling a precious particle of the world from time and space and holding it absolutely still, a great photograph can explode the totality of our world, such that we never see it quite the same again.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Draper, R. &lsquo;The Power of Photography&rsquo;, p.31-32, National Geographic. October 2013. [<a href="../../../url/nationalgeographic/archive-2013-oct/" class="color" rel="noopener" target="_blank" title="">nationalgeographic.com</a>]</font></h4>
 
         <!-- [The art of photography] is on this hyper-egalitarian, quasi-Orwellian, all-to-camera-ready terra infirma that National Geographic’s photographers continue to stand out. Why they do so is only partly explained by the innately personal choices (which lens for which lighting for which moment) that help define a photographer’s style. Instead, the very best of their images remind us that a photograph has the power to do infinitely more than document. It can transport us to unseen worlds. -->
 
-        <!-- <h4><font class="color text-quote">&ldquo;</font><i>This series will take you to the last wildernesses and show you the planet and its wildlife as you have never seen them before.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough, <i>Planet Earth</i> 2006</font></h4> -->
+        <!-- <h4><font class="color text-quote">&ldquo;</font><i>This series will take you to the last wildernesses and show you the planet and its wildlife as you have never seen them before.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough, <i>Planet Earth</i> 2006</font></h4> -->
 
       </div>
 
@@ -92,7 +92,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>A lot of the animals in <i>Planet Earth</i> people have never seen before. How can you expect anybody to care about a snow leopard if they have never seen one?</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Alastair Fothergill, interviewed in &lsquo;All Creatures Great, Small&hellip; And Endangered&rsquo;, New York Times, 2007 [<a href="../../../url/nytimes/2007-03-18-arts-television/" class="color" rel="noopener" target="_blank" title="New York Times / 2007 / 03 / 18 / Arts / Television">nytimes.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>A lot of the animals in <i>Planet Earth</i> people have never seen before. How can you expect anybody to care about a snow leopard if they have never seen one?</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Alastair Fothergill, interviewed in &lsquo;All Creatures Great, Small&hellip; And Endangered&rsquo;, New York Times, 2007 [<a href="../../../url/nytimes/2007-03-18-arts-television/" class="color" rel="noopener" target="_blank" title="New York Times / 2007 / 03 / 18 / Arts / Television">nytimes.com</a>]</font></h4>
 
       </div>
 
@@ -146,7 +146,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>If you go up to the high arctic tundra and just sit there, you might be unbelievably lucky if a wolf would run past you. It would be gone in a matter of seconds. We were able to film a complete hunt continuously from the air and get a complete sequence, which in the past would have been impossible.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Alastair Fothergill, interviewed in &lsquo;All Creatures Great, Small&hellip; And Endangered&rsquo;, New York Times, 2007 [<a href="../../../url/nytimes/2007-03-18-arts-television/" class="color" rel="noopener" target="_blank" title="New York Times / 2007 / 03 / 18 / Arts / Television">nytimes.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>If you go up to the high arctic tundra and just sit there, you might be unbelievably lucky if a wolf would run past you. It would be gone in a matter of seconds. We were able to film a complete hunt continuously from the air and get a complete sequence, which in the past would have been impossible.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Alastair Fothergill, interviewed in &lsquo;All Creatures Great, Small&hellip; And Endangered&rsquo;, New York Times, 2007 [<a href="../../../url/nytimes/2007-03-18-arts-television/" class="color" rel="noopener" target="_blank" title="New York Times / 2007 / 03 / 18 / Arts / Television">nytimes.com</a>]</font></h4>
 
       </div>
 
@@ -162,7 +162,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>We know when we go to the cinema, now, the camera is never static. It is always on the move. It is always on a Steadicam. It is always [on a track]. It is always flying. [&hellip;] We wanted to reflect that in our approach, not just because we wanted to pay homage to cinema, but because the reason why cinema does that is because as soon as you have that sense of moving camera. It feels more immersive. It feels more connected.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mike Gunton, executive producer, <i>Planet Earth II</i>, interviewed in &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox, 2017 [<a href="../../../url/vox/making-of-planet-earth-2/" class="color" rel="noopener" target="_blank" title="Vox / Making of Planet Earth 2">vox.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We know when we go to the cinema, now, the camera is never static. It is always on the move. It is always on a Steadicam. It is always [on a track]. It is always flying. [&hellip;] We wanted to reflect that in our approach, not just because we wanted to pay homage to cinema, but because the reason why cinema does that is because as soon as you have that sense of moving camera. It feels more immersive. It feels more connected.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mike Gunton, executive producer, <i>Planet Earth II</i>, interviewed in &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox, 2017 [<a href="../../../url/vox/making-of-planet-earth-2/" class="color" rel="noopener" target="_blank" title="Vox / Making of Planet Earth 2">vox.com</a>]</font></h4>
 
       </div>
 
@@ -182,7 +182,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>We wanted to push the proximity&mdash;get in close to the animals because we wanted to see the world's landscapes &ndash; our planet &ndash; through the animals' eyes.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mike Gunton, executive producer, <i>Planet Earth II</i>, interviewed in &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox, 2017 [<a href="../../../url/vox/making-of-planet-earth-2/" class="color" rel="noopener" target="_blank" title="Vox / Making of Planet Earth 2">vox.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We wanted to push the proximity&mdash;get in close to the animals because we wanted to see the world's landscapes &ndash; our planet &ndash; through the animals' eyes.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mike Gunton, executive producer, <i>Planet Earth II</i>, interviewed in &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox, 2017 [<a href="../../../url/vox/making-of-planet-earth-2/" class="color" rel="noopener" target="_blank" title="Vox / Making of Planet Earth 2">vox.com</a>]</font></h4>
 
       </div>
 
@@ -198,7 +198,7 @@
       <!-- </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>To capture [India city street macaque monkey troop] movements in their rooftop worlds, [the monkey film crew] needed to run a cable between buildings, and fly a camera along it. [&hellip;] The cable run was about sixty metres, and [the monkey team] can travel the whole length while panning and tilting, [&hellip;] giving some really dynamic stunning shots.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mark MacEwen, cinematographer</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>To capture [India city street macaque monkey troop] movements in their rooftop worlds, [the monkey film crew] needed to run a cable between buildings, and fly a camera along it. [&hellip;] The cable run was about sixty metres, and [the monkey team] can travel the whole length while panning and tilting, [&hellip;] giving some really dynamic stunning shots.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mark MacEwen, cinematographer</font></h4>
 
       </div>
 
@@ -294,7 +294,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>The imagery is of course the first thing that catches the eye&mdash;catches the attention. But without the revelation that storytelling brings, it palls quite quickly. So, no technology will ever replace the ability to tell a story that grips and fascinates and emotionally connects with an audience.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mike Gunton, executive producer, <i>Planet Earth II</i>, interviewed in &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox, 2017 [<a href="../../../url/vox/making-of-planet-earth-2/" class="color" rel="noopener" target="_blank" title="Vox / Making of Planet Earth 2">vox.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>The imagery is of course the first thing that catches the eye&mdash;catches the attention. But without the revelation that storytelling brings, it palls quite quickly. So, no technology will ever replace the ability to tell a story that grips and fascinates and emotionally connects with an audience.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Mike Gunton, executive producer, <i>Planet Earth II</i>, interviewed in &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox, 2017 [<a href="../../../url/vox/making-of-planet-earth-2/" class="color" rel="noopener" target="_blank" title="Vox / Making of Planet Earth 2">vox.com</a>]</font></h4>
 
       </div>
 
