--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>This is the only region in the world where you can still find mountain gorillas. There are only about 800 left in the whole world. Now if we lose them, we well have lost something very important for humanity. It is thanks to the animals, especially these gorillas, that our forest continues to be protected. Tourism brings in money to help us sustain the conservation of nature. There are many projects being implemented around the park because of the gorillas.</i><font class="color text-quote">&rdquo;</font> <font class="color thin">[&nbsp;Translation&nbsp;] &mdash;&nbsp;Andre Bauma, gorilla caretaker at the gorilla orphanage in Rumangabo, Virunga southern sector. <i>Virunga</i> (2014)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>This is the only region in the world where you can still find mountain gorillas. There are only about 800 left in the whole world. Now if we lose them, we well have lost something very important for humanity. It is thanks to the animals, especially these gorillas, that our forest continues to be protected. Tourism brings in money to help us sustain the conservation of nature. There are many projects being implemented around the park because of the gorillas.</i>&nbsp;<font class="color text-quote">&rdquo;</font> <font class="color thin">[&nbsp;Translation&nbsp;] &mdash;&nbsp;Andre Bauma, gorilla caretaker at the gorilla orphanage in Rumangabo, Virunga southern sector. <i>Virunga</i> (2014)</font></h4>
 
         <!-- Dans le monde entier, c'est dans cet entity là où vous pouvez trouver encore les gorilles des montagnes. Il y a seulement environt huit cent qui reste sure toute l'entière planète terre. Maintenant si nous les perdont, nous auront perdu quelque chose de très importante pour l'humanité. Notre forét ici, c'est grace a ces animaux, et surtout les gorilles, que cette forét est encore prot&eactue;gée. Tourisme nous apporte de l'argent pour nous aider a continuer nos activités de la conservation de la nature. Il y a plusieurs projets qui sont entrain d'étre r&eactue;aliser autour du parc national de Virunga a cause de nos gorilles. -->
 
@@ -131,7 +131,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>After 21 years of debates and conferences, it is time to declare: no more talk, no more excuses, no more ten-year studies, no more allowing the fossil fuel companies to manipulate and dictate the science and policies that affect our future. The world is now watching.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Leonardo di Caprio, messenger of peace at Paris climate accord signing ceremony, New York City, New York (2016)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>After 21 years of debates and conferences, it is time to declare: no more talk, no more excuses, no more ten-year studies, no more allowing the fossil fuel companies to manipulate and dictate the science and policies that affect our future. The world is now watching.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Leonardo di Caprio, messenger of peace at Paris climate accord signing ceremony, New York City, New York (2016)</font></h4>
       </div>
 
       <div class="clear">
@@ -167,7 +167,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>This ivory is being moved subversively across continents, being sold under the table. This is black money. It is fueling international crime. This is an international problem. It is not Africa's problem. The individuals that are fighting this battle, they can not win it alone. It is too big. It is too complex.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Iain Craig, director of conservation at Northern Rangelands Trust. <i>The Ivory Game</i> (2016)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>This ivory is being moved subversively across continents, being sold under the table. This is black money. It is fueling international crime. This is an international problem. It is not Africa's problem. The individuals that are fighting this battle, they can not win it alone. It is too big. It is too complex.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Iain Craig, director of conservation at Northern Rangelands Trust. <i>The Ivory Game</i> (2016)</font></h4>
       </div>
 
       <div>
@@ -202,7 +202,7 @@
       </div> -->
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Fencing development is the future when you look at Africa. There is no choice involved, it is going to happen, and people of Africa want the same things that everyone else wants. They want to be able to have a TV. They want to have a house, which is not knocked over. They want to be able to store their food in an area where an animal does not get in there and finish it. Internet, which no one really has yet, and without it, these guys are never going to agree to living with wildlife unless they get the best of both worlds.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Craig Miller, head of security at Big Life Foundation. <i>The Ivory Game</i> (2016)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Fencing development is the future when you look at Africa. There is no choice involved, it is going to happen, and people of Africa want the same things that everyone else wants. They want to be able to have a TV. They want to have a house, which is not knocked over. They want to be able to store their food in an area where an animal does not get in there and finish it. Internet, which no one really has yet, and without it, these guys are never going to agree to living with wildlife unless they get the best of both worlds.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Craig Miller, head of security at Big Life Foundation. <i>The Ivory Game</i> (2016)</font></h4>
       </div>
 
       <div>
@@ -210,7 +210,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Are we really &ndash; in our generation &ndash; going to allow the biggest mammal on Earth to disappear. Losing elephants from Africa is just a slow erosion of humanity. Then what is next: we are going to lose the rhino, we are going to lose the giraffe, we are going to lose the lion. Suddenly, we are going to have an empty world &ndash; full of people &ndash; but nothing wild. [&hellip;] We need to build fences, we need to put in water, and just managing elephants costs money. And, yes, it is a national responsibility but it is actually a global responsibility. The world wants elephants.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Iain Craig, director of conservation at Northern Rangelands Trust. <i>The Ivory Game</i> (2016)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Are we really &ndash; in our generation &ndash; going to allow the biggest mammal on Earth to disappear. Losing elephants from Africa is just a slow erosion of humanity. Then what is next: we are going to lose the rhino, we are going to lose the giraffe, we are going to lose the lion. Suddenly, we are going to have an empty world &ndash; full of people &ndash; but nothing wild. [&hellip;] We need to build fences, we need to put in water, and just managing elephants costs money. And, yes, it is a national responsibility but it is actually a global responsibility. The world wants elephants.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Iain Craig, director of conservation at Northern Rangelands Trust. <i>The Ivory Game</i> (2016)</font></h4>
       </div>
 
       <div class="clear">
