--- a/scene/two/history-of-forests-trees/index.html
+++ b/scene/two/history-of-forests-trees/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>I was interested in the distinction between trees as well as the mass of the form and color. I went back to Naturalism, but kept the Impressionism and Cubism as underlying concepts for picture ideas.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, on the subject of Andrew Wyeth works at the Albright-Knox Gallery in Buffalo, New York, <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>I was interested in the distinction between trees as well as the mass of the form and color. I went back to Naturalism, but kept the Impressionism and Cubism as underlying concepts for picture ideas.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, on the subject of Andrew Wyeth works at the Albright-Knox Gallery in Buffalo, New York, <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books</font></h4>
 
         <!-- essay by Rick Archibold: &lsquo;An Ecological Artist&rsquo; -->
 
@@ -69,7 +69,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>A painting is made to look like before that moment was different and after that moment was different, because that is what nature is like.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>Images of the Wild</i> (documentary, 1978) National Film Board of Canada</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>A painting is made to look like before that moment was different and after that moment was different, because that is what nature is like.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>Images of the Wild</i> (documentary, 1978) National Film Board of Canada</font></h4>
 
         <!-- Norman R. Lightfoot (director), Beryl Fox (producer) -->
 
@@ -96,7 +96,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>In a sense, it does not matter what the subject of a painting is, so long as there provides an opportunity for the eye to explore shapes and forms &ndash; concave and convex, positive and negative &ndash; as do the works of abstract artists. Art is an adventure for the eye. Although I care about scientific accuracy, I also look upon feather and fur as pattern, color, rhythm&mdash;elements of design.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>New Works</i>, &lsquo;Artist's Statement&rsquo; (2010) Greystone Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>In a sense, it does not matter what the subject of a painting is, so long as there provides an opportunity for the eye to explore shapes and forms &ndash; concave and convex, positive and negative &ndash; as do the works of abstract artists. Art is an adventure for the eye. Although I care about scientific accuracy, I also look upon feather and fur as pattern, color, rhythm&mdash;elements of design.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>New Works</i>, &lsquo;Artist's Statement&rsquo; (2010) Greystone Books</font></h4>
 
       </div>
 
@@ -118,7 +118,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>In this art, you see people and animals and trees and mountains and even air as being parts of one whole. Each element has a part to play, and man is just a tiny part of a great cosmos.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>In this art, you see people and animals and trees and mountains and even air as being parts of one whole. Each element has a part to play, and man is just a tiny part of a great cosmos.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books</font></h4>
 
       </div>
 
@@ -136,7 +136,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>The abstract language [Kline] wanted to pursue was figure on ground. [&hellip;] Black on white, but then white back on top of the black, black back on top of the white again. It was an iterative process. A giving and going [&hellip;] between these two colors.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Corey D'Augustine, <i>In the Studio</i> &lsquo;The Painting Techniques of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>The abstract language [Kline] wanted to pursue was figure on ground. [&hellip;] Black on white, but then white back on top of the black, black back on top of the white again. It was an iterative process. A giving and going [&hellip;] between these two colors.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Corey D'Augustine, <i>In the Studio</i> &lsquo;The Painting Techniques of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art</font></h4>
 
       </div>
 
@@ -181,7 +181,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Like tigers, bears are being killed for their gallbladders and other body parts thought by some cultures to be medicinal. Polar bears are threatened by climate change. Elephants have been exterminated throughout much of the range because of the ivory in their tusks.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>New Works</i> (2010) Greystone Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Like tigers, bears are being killed for their gallbladders and other body parts thought by some cultures to be medicinal. Polar bears are threatened by climate change. Elephants have been exterminated throughout much of the range because of the ivory in their tusks.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>New Works</i> (2010) Greystone Books</font></h4>
 
         <!-- As Jane Goodall has pointed out to the world, chimpanzees and other primates are greatly endangered due to extensive logging in large scale hunting for &lsquo;bush&rsquo; meat. -->
 
@@ -223,7 +223,7 @@
 
       <div class="color quote">
 
-        <h4><font class="color text-quote">&ldquo;</font><i>This is the home of an animal so rare, it is almost mythical. An Amur tiger. There are less than six-hundred of them. [&hellip;] A male Siberian tiger patrols a territory of almost two-thousand square kilometres, and it has to do so if it is to find enough prey to keep itself alive through the long winter. This is an impoverished land, where food of any kind is scarce. [&hellip;] Poaching has taken the Siberian tiger to the brink of extinction, but since the 1980s their numbers have slowly increased. [Their] future still depends on having vast areas of forest in which to hunt.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough, <i>Our Planet</i> e/8: &lsquo;Forests&rsquo; (2019) Netflix</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>This is the home of an animal so rare, it is almost mythical. An Amur tiger. There are less than six-hundred of them. [&hellip;] A male Siberian tiger patrols a territory of almost two-thousand square kilometres, and it has to do so if it is to find enough prey to keep itself alive through the long winter. This is an impoverished land, where food of any kind is scarce. [&hellip;] Poaching has taken the Siberian tiger to the brink of extinction, but since the 1980s their numbers have slowly increased. [Their] future still depends on having vast areas of forest in which to hunt.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough, <i>Our Planet</i> e/8: &lsquo;Forests&rsquo; (2019) Netflix</font></h4>
 
       </div>
 
@@ -257,7 +257,7 @@
       </div>
 
       <!-- <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>It sometimes seems that the main factors affecting our forest plans and schemes is not sustained use, not harvesting a renewable resource, but ignorance, laziness and greed.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>It sometimes seems that the main factors affecting our forest plans and schemes is not sustained use, not harvesting a renewable resource, but ignorance, laziness and greed.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books</font></h4>
 
       </div> -->
 
