--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -146,7 +146,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>If you do a painting with five strokes instead of ten, you can make the painting sing.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Tyrus Wong, <i>Tyrus</i> (documentary film, 2015)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>If you do a painting with five strokes instead of ten, you can make the painting sing.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Tyrus Wong, <i>Tyrus</i> (documentary film, 2015)</font></h4>
 
         <!-- If there is any kind of magic in this world, it exists in the attempt of understanding someone sharing something. -->
 
