--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="color quote text">
-        <h4><font class="color text-quote">&ldquo;</font><i>I reduced painting to its logical conclusion and exhibited three canvases: red, blue and yellow. [&hellip;] Basic colors. Every plane is a plane and there is to be no representation.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Aleksandr Rodchenko</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>I reduced painting to its logical conclusion and exhibited three canvases: red, blue and yellow. [&hellip;] Basic colors. Every plane is a plane and there is to be no representation.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Aleksandr Rodchenko</font></h4>
 
       </div>
 
