--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Not just the keepers but the rangers, too, they spend their lives with these animals, more than they do with their own families. And the moment I saw Jojo Wachira leaning in, and the keepers were saying goodbye to Sudan&hellip; Sudan kind of then leaned his massive heavy head right back into Jojo’s head. To me that was the story. It was not just this story of the last male northern white rhino on the planet dying, it was actually the deep bond that these keepers had, and it became this symbol of what humans can be. In that image, [you can see that] we did this to these animals. Humans are the ones that made this happen. We can be the great destroyer or the best protectors.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ami Vitale, Nikon Ambassador and National Geographic photographer interviewed on <i>Boots on the Ground</i> (podcast, September 2021)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Not just the keepers but the rangers, too, they spend their lives with these animals, more than they do with their own families. And the moment I saw Jojo Wachira leaning in, and the keepers were saying goodbye to Sudan&hellip; Sudan kind of then leaned his massive heavy head right back into Jojo’s head. To me that was the story. It was not just this story of the last male northern white rhino on the planet dying, it was actually the deep bond that these keepers had, and it became this symbol of what humans can be. In that image, [you can see that] we did this to these animals. Humans are the ones that made this happen. We can be the great destroyer or the best protectors.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ami Vitale, Nikon Ambassador and National Geographic photographer interviewed on <i>Boots on the Ground</i> (podcast, September 2021)</font></h4>
 
         <!-- Sept 2 2021 -->
 
@@ -73,7 +73,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>It is thought as many as twenty million elephants once roamed the continent, but many have been killed for their tusks&mdash;their ivory used for entirely ornimental purposes. Now just 350,000 elephants remain. [&hellip;] But of all Africa's remaining wildlife, it is the rhinoceros that has been most affected by poaching. In the Far East, its horn is used as traditional medicine. All of Africa's rhinos are now under threath, but for one subspecies it is likely to be too late. The northern white rhinoceros is facing extinction.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough. (2019) <i>Seven Worlds, One Planet</i>, e/7: Africa. BBC Studios</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>It is thought as many as twenty million elephants once roamed the continent, but many have been killed for their tusks&mdash;their ivory used for entirely ornimental purposes. Now just 350,000 elephants remain. [&hellip;] But of all Africa's remaining wildlife, it is the rhinoceros that has been most affected by poaching. In the Far East, its horn is used as traditional medicine. All of Africa's rhinos are now under threath, but for one subspecies it is likely to be too late. The northern white rhinoceros is facing extinction.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough. (2019) <i>Seven Worlds, One Planet</i>, e/7: Africa. BBC Studios</font></h4>
 
       </div>
 
@@ -86,7 +86,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>These two females are the last of their kind. When they die, an entire subspecies that inhabited the earth for millions of years will have disappeared forever.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough (cont'd)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>These two females are the last of their kind. When they die, an entire subspecies that inhabited the earth for millions of years will have disappeared forever.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough (cont'd)</font></h4>
 
       </div>
 
@@ -105,7 +105,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>We watch them every day, looking at extinction. There is nothing much they can do except accept the fate that you have allowed them to be in.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;James Mwenda, ranger at Ol Pejeta conservancy, Kenya</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We watch them every day, looking at extinction. There is nothing much they can do except accept the fate that you have allowed them to be in.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;James Mwenda, ranger at Ol Pejeta conservancy, Kenya</font></h4>
 
       </div>
 
