--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Story is all around us. It's everywhere. It's your life. Whatever happens to you throughout the day, throughout the week, that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick del Carmen. (2016) <i>The Bancroft Brothers Animation Podcast</i>, e/64: &lsquo;The Bancroft Bros. talk with the Del Carmen Bros: Animation in the Family.&rsquo; Creative Talent Network (CTN) Burbank, California</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Story is all around us. It's everywhere. It's your life. Whatever happens to you throughout the day, throughout the week, that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick del Carmen. (2016) <i>The Bancroft Brothers Animation Podcast</i>, e/64: &lsquo;The Bancroft Bros. talk with the Del Carmen Bros: Animation in the Family.&rsquo; Creative Talent Network (CTN) Burbank, California</font></h4>
 
       </div>
 
@@ -88,7 +88,7 @@
       </div>
 
       <!-- <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>There’s no cause for alarm. I chopped just one tree. I am doing no harm. I’m being quite useful.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Once-ler, <i>The Lorax</i> (1971)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>There’s no cause for alarm. I chopped just one tree. I am doing no harm. I’m being quite useful.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Once-ler, <i>The Lorax</i> (1971)</font></h4>
 
       </div> -->
 
@@ -107,7 +107,7 @@
       </div>
 
       <!-- <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>I speak for the trees, for the trees have no tongues.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Lorax, <i>The Lorax</i> (1971)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>I speak for the trees, for the trees have no tongues.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Lorax, <i>The Lorax</i> (1971)</font></h4>
 
       </div> -->
 
