--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -164,7 +164,7 @@
       <!-- </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>If Kenya’s Daniel arap Moi is the father of the ivory ban, then Zimbabwe’s Robert Mugabe is the father of its first rupture.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Bryan Christy, Blood Ivory: &lsquo;Ivory Worship&rsquo; (magazine, October 2012), National Geographic [<a class="color" href="../../../url/nationalgeographic/blood-ivory/" title="National Geographic / Ivory Worship" target="_blank" rel="noopener">nationalgeographic.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>If Kenya’s Daniel arap Moi is the father of the ivory ban, then Zimbabwe’s Robert Mugabe is the father of its first rupture.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Bryan Christy, Blood Ivory: &lsquo;Ivory Worship&rsquo; (magazine, October 2012), National Geographic [<a class="color" href="../../../url/nationalgeographic/blood-ivory/" title="National Geographic / Ivory Worship" target="_blank" rel="noopener">nationalgeographic.com</a>]</font></h4>
 
       </div>
 
@@ -225,7 +225,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>In recent years China has been implicated in more large-scale ivory seizures than any other non-African country. For the first time in generations many Chinese can afford to reach forward into a wealthy future, and they can also afford to look back into their own vibrant past. One of the first places many look is religion.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Bryan Christy, Blood Ivory: &lsquo;Ivory Worship&rsquo; (magazine, October 2012), National Geographic [<a class="color" href="../../../url/nationalgeographic/blood-ivory/" title="National Geographic / Ivory Worship" target="_blank" rel="noopener">nationalgeographic.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>In recent years China has been implicated in more large-scale ivory seizures than any other non-African country. For the first time in generations many Chinese can afford to reach forward into a wealthy future, and they can also afford to look back into their own vibrant past. One of the first places many look is religion.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Bryan Christy, Blood Ivory: &lsquo;Ivory Worship&rsquo; (magazine, October 2012), National Geographic [<a class="color" href="../../../url/nationalgeographic/blood-ivory/" title="National Geographic / Ivory Worship" target="_blank" rel="noopener">nationalgeographic.com</a>]</font></h4>
 
         <!-- By all accounts, China is the world’s greatest villain when it comes to smuggled ivory. -->
 
