--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -71,7 +71,7 @@
       <p class="text-right gutter-side lineend">Chauvet-Pont-d’Arc Cave, 30,000-32,000 BP [<a title="UNESCO / Chauvet-Pont-d'Arc" href="../../../url/unesco/1426/" target="_blank" rel="noopener">unesco.org</a>]</p>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>From the earliest days, [humans have] tried to capture in drawings the living quality of the creatures around [them]. [&hellip;] For some presumptuous reason, [we feel] the need to create something of [our] own that appears to be living, that has an inner strength, a vitality, a separate identity &ndash; something that speaks out with authority &ndash; a creation that gives the illusion of life. Twenty-five thousand years ago, in the caves of southwestern Europe, [the early modern humans] made astounding drawings of the animals [they] hunted. [The] representations are not only accurate and beautifully drawn, but many seem to have an inner life combined with a suggestion of movement.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Frank Thomas and Ollie Johnston. (1981) <i>The Illusion of Life: Disney Animation</i>, p&nbsp;13. Walt Disney Publications.</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>From the earliest days, [humans have] tried to capture in drawings the living quality of the creatures around [them]. [&hellip;] For some presumptuous reason, [we feel] the need to create something of [our] own that appears to be living, that has an inner strength, a vitality, a separate identity &ndash; something that speaks out with authority &ndash; a creation that gives the illusion of life. Twenty-five thousand years ago, in the caves of southwestern Europe, [the early modern humans] made astounding drawings of the animals [they] hunted. [The] representations are not only accurate and beautifully drawn, but many seem to have an inner life combined with a suggestion of movement.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Frank Thomas and Ollie Johnston. (1981) <i>The Illusion of Life: Disney Animation</i>, p&nbsp;13. Walt Disney Publications.</font></h4>
 
       </div>
 
@@ -108,7 +108,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Above all he fell in love with the infinitely rich ecosystems of the rainforest and the great mammals of East Africa. Since that first trip, he has returned to East Africa many times &ndash; it was his paintings of East African wildlife that launched his art career &ndash; and he often refers to it as the Garden of Eden, one of the last places on earth where men and nature have lived in complete harmony.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick Archibold, <i>Robert Bateman: An Artist in Nature</i>, Essay: &lsquo;The Education of an Environmentalist&rsquo; (1990) Penguin Books Canada Limited</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Above all he fell in love with the infinitely rich ecosystems of the rainforest and the great mammals of East Africa. Since that first trip, he has returned to East Africa many times &ndash; it was his paintings of East African wildlife that launched his art career &ndash; and he often refers to it as the Garden of Eden, one of the last places on earth where men and nature have lived in complete harmony.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick Archibold, <i>Robert Bateman: An Artist in Nature</i>, Essay: &lsquo;The Education of an Environmentalist&rsquo; (1990) Penguin Books Canada Limited</font></h4>
 
       </div>
 
@@ -124,7 +124,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Every bald eagle’s face [&hellip;] has its own individuality. It only stands to reason that every zebra stripe is different, every fingerprint, every snowflake is different, unique. [&hellip;] If we started thinking about the planet earth in this way and paying attention to the particularity of the different species and the different races, we would probably have a different attitude toward wiping things out.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>Robert Bateman: An Artist in Nature</i>, Essay: &lsquo;The Education of an Environmentalist&rsquo; (1990) Penguin Books Canada Limited</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Every bald eagle’s face [&hellip;] has its own individuality. It only stands to reason that every zebra stripe is different, every fingerprint, every snowflake is different, unique. [&hellip;] If we started thinking about the planet earth in this way and paying attention to the particularity of the different species and the different races, we would probably have a different attitude toward wiping things out.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman, <i>Robert Bateman: An Artist in Nature</i>, Essay: &lsquo;The Education of an Environmentalist&rsquo; (1990) Penguin Books Canada Limited</font></h4>
 
       </div>
 
